--- a/src/main/resources/static/styles/dropdown.css
+++ b/src/main/resources/static/styles/dropdown.css
@@ -1,5 +1,5 @@
 .dropbtn {
-    background-color: dodgerblue;
+    background-color: #2196f3;
     width: 200px;
     color: white;
     padding: 16px;
@@ -7,18 +7,18 @@
     border: none;
     cursor: pointer;
     transition: 0.5s;
-
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #1372cd;
+    background-color: #1e88db;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
+    margin: 10px;
 }
 
 /* Dropdown Content (Hidden by Default) */
