--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -8,68 +8,75 @@
     <link rel="stylesheet" href="/styles/profile.css">
 </head>
 <body>
-<div id="main" class="main">
-    <div th:insert="fragments::topnav"></div>
-    <div class="page">
-        <div class="header" sec:authorize="hasRole('ROLE_USER')">
-            <div>Профиль</div>
-            <div th:if="${not_ready}">
-                Вы должны заполнить профиль!
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Изменить</button>
-                <div class="dropdown-content">
-                    <a href="/profile/edit">Информация профиля</a>
-                    <a href="/profile/psw_change">Пароль</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="header" sec:authorize="hasRole('ROLE_ADMIN')">
-            <div>Профиль пользователя <span th:text="${user.username}"></span></div>
-            <div class="dropdown">
-                <button class="dropbtn">Действия</button>
-                <div class="dropdown-content">
-                    <a href="#">Отправить письмо</a>
-                </div>
-            </div>
-        </div>
-        <div class="row_block" style="width: 100%">
-            <div class="img_wrap">
-                <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
-                <img th:unless="${image}" src="/img/profile.png">
-            </div>
-            <div class="column_block card_block" style="justify-content: space-between">
-                <div>
-                    <div th:text="${user.username}"></div>
-                    <div th:text="${user.email}"></div>
-                    <div th:if="${ready}">
-                        <div th:text="${profile.name}"></div>
-                        <div th:text="${university}"></div>
-                        <div th:text="${city}"></div>
-                        <div th:text="${profile.age}"></div>
-                        <div th:text="${profile.gender}"></div>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header th:replace="fragments::topnav">
+    </header>
+    <div th:replace="fragments::sidenav">
+    </div>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            <div class="page">
+                <div class="header" sec:authorize="hasRole('ROLE_USER')">
+                    <div>Профиль</div>
+                    <div th:if="${not_ready}">
+                        Вы должны заполнить профиль!
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Изменить</button>
+                        <div class="dropdown-content">
+                            <a href="/profile/edit">Информация профиля</a>
+                            <a href="/profile/psw_change">Пароль</a>
+                        </div>
                     </div>
                 </div>
+
+                <div class="header" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <div>Профиль пользователя <span th:text="${user.username}"></span></div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Действия</button>
+                        <div class="dropdown-content">
+                            <a href="#">Отправить письмо</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row_block" style="width: 100%">
+                    <div class="img_wrap">
+                        <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
+                        <img th:unless="${image}" src="/img/profile.png">
+                    </div>
+                    <div class="column_block card_block" style="justify-content: space-between">
+                        <div>
+                            <div th:text="${user.username}"></div>
+                            <div th:text="${user.email}"></div>
+                            <div th:if="${ready}">
+                                <div th:text="${profile.name}"></div>
+                                <div th:text="${university}"></div>
+                                <div th:text="${city}"></div>
+                                <div th:text="${profile.age}"></div>
+                                <div th:text="${profile.gender}"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column_block" style="width: 100%">
+                    <table>
+                        <thead>
+                        <th>Событие</th>
+                        <th>Дата</th>
+                        </thead>
+                        <tbody>
+                        <tr th:each="event:${user.events}">
+                            <td>
+                                <a th:href="@{/events/{id}(id=${event.id})}" th:text="${event.title}"></a>
+                            </td>
+                            <td th:text="${event.eventDate.toLocalDate()}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <div class="column_block" style="width: 100%">
-            <table>
-                <thead>
-                <th>Событие</th>
-                <th>Дата</th>
-                </thead>
-                <tbody>
-                <tr th:each="event:${user.events}">
-                    <td>
-                        <a th:href="@{/events/{id}(id=${event.id})}" th:text="${event.title}"></a>
-                    </td>
-                    <td th:text="${event.eventDate.toLocalDate()}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    </main>
 </div>
 <div th:insert="fragments::scripts"></div>
 </body>
