use mdl components

--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -16,7 +16,7 @@
                 <div class="header">
                     <div>
                         <div>
-                            <a href="/events/all">Назад</a>
+                            <a href="#" onclick="history.back()">Назад</a>
                         </div>
                         <div id="event_id" th:text="${event.id}" style="display: none"></div>
                         <h4 th:text="${event.title}"></h4>
