--- a/src/main/resources/static/styles/dropdown.css
+++ b/src/main/resources/static/styles/dropdown.css
@@ -35,6 +35,7 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
+    font-size: 16px;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
