--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -13,13 +13,28 @@ a {
     text-decoration: none;
 }
 
+.anc {
+    font-size: 18px;
+}
+
 textarea {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
-    margin: 10px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     outline: none;
     resize: none;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+textarea.text {
+    border: none;
+    width: 100%;
+    height: 100px;
+    resize: none;
+    outline: none;
+    overflow-y: scroll;
 }
 
 input {
@@ -28,17 +43,6 @@ input {
 
 body::-webkit-scrollbar {
     width: 0px;
-}
-
-
-header a {
-    display: block;
-    font-size: 20px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: 0.3s;
 }
 
 header a:hover {
@@ -119,16 +123,6 @@ header a:hover {
     box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.2);
 }
 
-textarea.text {
-    border: 1px solid #cccccc;
-    margin: 10px;
-    padding: 8px;
-    width: 95%;
-    height: 100px;
-    resize: none;
-    outline: none;
-    overflow-y: scroll;
-}
 
 .btn1 {
     color: white;
