--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -17,6 +17,7 @@
         <div class="page-content">
             <div class="page">
                 <div class="header" sec:authorize="hasRole('ROLE_USER')">
+                    <input onclick="history.back()" type="submit" value="Назад"/>
                     <div>Профиль</div>
                     <div th:if="${not_ready}">
                         Вы должны заполнить профиль!
@@ -31,7 +32,12 @@
                 </div>
 
                 <div class="header" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <div>Профиль пользователя <span th:text="${user.username}"></span></div>
+                    <div>
+                        <div>
+                            <a href="#" onclick="history.back()">Назад</a>
+                        </div>
+                        <h4>Профиль пользователя <span th:text="${user.username}"></span></h4>
+                    </div>
                     <div class="dropdown">
                         <button class="dropbtn">Действия</button>
                         <div class="dropdown-content">
