--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -23,9 +23,11 @@ textarea {
     padding-top: 10px;
     padding-bottom: 10px;
     outline: none;
-    resize: none;
     margin-top: 10px;
     margin-bottom: 30px;
+    resize: none !important;
+    width: 100% !important;
+    height: 100px !important;
 }
 
 textarea.text {
@@ -43,6 +45,10 @@ input {
 
 body::-webkit-scrollbar {
     width: 0px;
+}
+
+nav a {
+    font-size: 18px !important;
 }
 
 header a:hover {
@@ -129,6 +135,7 @@ header a:hover {
     padding: 14px 20px;
     margin: 20px;
     text-decoration: none;
+    font-size: 16px;
     border: none;
     cursor: pointer;
     width: 200px;
@@ -137,11 +144,11 @@ header a:hover {
 }
 
 .active {
-    background-color: #4CAF50;
+    background-color: #cc0000;
 }
 
 .active:hover {
-    background-color: #429144;
+    background-color: #a90000;
 }
 
 .used {
@@ -150,6 +157,14 @@ header a:hover {
 
 .used:hover {
     background-color: grey;
+}
+
+.blue {
+    background-color: #2196f3;
+}
+
+.blue:hover {
+    background-color: #1372cd;
 }
 
 table tbody {
@@ -165,9 +180,12 @@ table thead, table tbody tr {
 }
 
 th {
-    padding: 10px;
+    font-size: 16px !important;
 }
 
+th, td {
+    text-align: left !important;
+}
 
 input .wrong {
     box-shadow: 0 0 5px red;
