--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -17,10 +17,11 @@
         <div class="page-content">
             <div class="page">
                 <div class="header" sec:authorize="hasRole('ROLE_USER')">
-                    <input onclick="history.back()" type="submit" value="Назад"/>
-                    <div>Профиль</div>
-                    <div th:if="${not_ready}">
-                        Вы должны заполнить профиль!
+                    <div>
+                        <div>
+                            <a href="#" onclick="history.back()">Назад</a>
+                        </div>
+                        <h4>Профиль пользователя <span th:text="${user.username}"></span></h4>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Изменить</button>
@@ -54,18 +55,18 @@
                         <div>
                             <div th:text="${user.username}"></div>
                             <div th:text="${user.email}"></div>
+                            <hr>
                             <div th:if="${ready}">
                                 <div th:text="${profile.name}"></div>
                                 <div th:text="${university}"></div>
                                 <div th:text="${city}"></div>
-                                <div th:text="${profile.age}"></div>
-                                <div th:text="${profile.gender}"></div>
+                                <div>Возраст: <span th:text="${profile.age}"></span></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="column_block" style="width: 100%">
-                    <table>
+                    <table class="mdl-data-table">
                         <thead>
                         <th>Событие</th>
                         <th>Дата</th>
