--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -92,26 +92,13 @@
         </div>
     </main>
 </div>
-<div id="emailPopup" class="popup">
-    <a href="##" class="popup__area"></a>
-    <div class="popup__body">
-        <div class="popup__content">
-            <a href="##" class="popup__close"><i class="material-icons">cancel</i></a>
-            <h4>Сообщение получат участники текущего события</h4>
-            <div>
-                <textarea placeholder="Введите текст сообщения..." required></textarea>
-                <button class="btn1 blue">Отправить</button>
-            </div>
-        </div>
-    </div>
-</div>
+<div th:insert="fragments::emailPopup"></div>
 <div th:insert="fragments::scripts"></div>
 <script type="text/javascript" src="/js/users.js"></script>
 <script type="text/javascript" src="/js/loadSubscribers.js">
 </script>
-<script type="text/javascript" , src="/js/event.js">
-</script>
-<script type="text/javascript" src="/js/emailForEvent.js"></script>
+<script type="text/javascript" , src="/js/event.js"></script>
+<script type="text/javascript" src="/js/sendEmail.js"></script>
 
 </body>
 </html>
