--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -4,9 +4,6 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:insert="fragments::headerfiles">
 </head>
-<head>
-    <link rel="stylesheet" href="/styles/content.css">
-</head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header th:replace="fragments::topnav">
@@ -18,15 +15,25 @@
             <div class="page">
                 <div class="header">
                     <h5>Участники</h5>
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                        <label class="mdl-button mdl-js-button mdl-button--icon" for="field">
-                            <i class="material-icons">search</i>
-                        </label>
-                        <div class="mdl-textfield__expandable-holder">
-                            <input class="mdl-textfield__input" onchange="search()" type="text" id="field">
-                            <label class="mdl-textfield__label" for="field">Expandable Input</label>
+                    <div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                            <label class="mdl-button mdl-js-button mdl-button--icon" for="field">
+                                <i class="material-icons">search</i>
+                            </label>
+                            <div class="mdl-textfield__expandable-holder">
+                                <input class="mdl-textfield__input" onchange="search()" type="text" id="field">
+                                <label class="mdl-textfield__label" for="field">Expandable Input</label>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <button class="dropbtn">Действия</button>
+                            <div class="dropdown-content">
+                                <a href="#emailPopup" class="popup__link">Рассылка</a>
+                            </div>
                         </div>
                     </div>
+
+
                 </div>
                 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                     <thead>
@@ -43,18 +50,20 @@
             </div>
 
             <script type="text/javascript" src="/js/users.js"></script>
-            <script type="text/javascript">
-                onLoadUsersPage()
-
-                async function search() {
-                    let word = document.getElementById("field").value
-                    await fillUsers(await loadUsers(word))
-                }
-            </script>
-            <div th:insert="fragments::scripts"></div>
         </div>
     </main>
 </div>
+<div th:insert="fragments::emailPopup"></div>
+<div th:insert="fragments::scripts"></div>
+<script type="text/javascript">
+    async function search() {
+        let word = document.getElementById("field").value
+        await fillUsers(await loadUsers(word))
+    }
+
+    onLoadUsersPage()
+</script>
+<script type="text/javascript" src="/js/sendEmail.js"></script>
 </body>
 
 </html>
