--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -63,7 +63,7 @@
 
     onLoadUsersPage()
 </script>
-<script type="text/javascript" src="/js/sendEmail.js"></script>
+<script type="text/javascript" src="/js/emailPopup.js"></script>
 </body>
 
 </html>
