--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -19,16 +19,15 @@
                             <a href="/events/all">Назад</a>
                         </div>
                         <div id="event_id" th:text="${event.id}" style="display: none"></div>
-                        <h4 th:text="${event.title}"></h4>
+                        <h4 id="title"></h4>
                         <div id="message" style="display: none">Вы подписаны на это событие!</div>
                     </div>
                     <div id="admin_block" sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown">
                         <button class="dropbtn">Действия</button>
                         <div class="dropdown-content">
                             <a href="#emailPopup" class="popup__link">Рассылка</a>
-                            <a th:href="@{/events/edit/{id}(id=${event.id})}">
-                                Изменить
-                            </a>
+                            <a href="#eventPopup" class="popup__link">Изменить</a>
+
                             <form id="do_edit" th:action="@{/events/delete/{id}(id=${event.id})}" method="post">
                                 <a onclick="if(confirm('Удалить это событие?'))document.getElementById('do_edit').submit();">
                                     Удалить
@@ -45,7 +44,8 @@
                 </div>
 
                 <div class="column_block" style="width: 100%">
-                    <textarea class="text" th:text="${event.description}" readonly="readonly"></textarea>
+                    <textarea id="description" class="text"
+                              readonly="readonly"></textarea>
                     <div>
                         <table class="mdl-data-table">
                             <thead>
@@ -59,20 +59,14 @@
                             <tr>
                                 <td><span th:text="${event.createdDate.toLocalDate()}"></span>,
                                     <span th:text="${event.createdDate.toLocalTime()}"></span></td>
-                                <td>
-                                    <span th:text="${event.lastModifiedDate.toLocalDate()}"></span>,
-                                    <span th:text="${event.lastModifiedDate.toLocalTime()}"></span>
-                                </td>
-                                <td>
-                                    <span th:text="${event.eventDate.toLocalDate()}"></span>,
-                                    <span th:text="${event.eventDate.toLocalTime()}"></span>
-                                </td>
+                                <td id="modified"></td>
+                                <td id="date"></td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
 
-                    <div sec:authorize="hasRole('ROLE_ADMIN')" id="admin">
+                    <div sec:authorize="hasRole('ROLE_ADMIN')">
                         <h4>Участники</h4>
                         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                             <thead>
@@ -93,12 +87,11 @@
     </main>
 </div>
 <div th:insert="fragments::emailPopup"></div>
+<div th:insert="fragments::eventPopup"></div>
 <div th:insert="fragments::scripts"></div>
 <script type="text/javascript" src="/js/users.js"></script>
-<script type="text/javascript" src="/js/loadSubscribers.js">
-</script>
-<script type="text/javascript" , src="/js/event.js"></script>
-<script type="text/javascript" src="/js/sendEmail.js"></script>
-
+<script type="text/javascript" src="/js/emailPopup.js"></script>
+<script type="text/javascript" src="/js/eventPopup.js"></script>
+<script type="text/javascript" src="/js/eventPage.js"></script>
 </body>
 </html>
