--- a/src/main/resources/templates/events/events.html
+++ b/src/main/resources/templates/events/events.html
@@ -16,24 +16,22 @@
                 <div class="header">
                     <h4>События</h4>
                     <div class="row_block">
-                        <form action="/events/search">
-                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                                <label class="mdl-button mdl-js-button mdl-button--icon" for="field">
-                                    <i class="material-icons">search</i>
-                                </label>
-                                <div class="mdl-textfield__expandable-holder">
-                                    <input class="mdl-textfield__input" name="word" onkeyup="search()" type="text"
-                                           id="field">
-                                    <label class="mdl-textfield__label" for="field">Expandable Input</label>
-                                </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                            <label class="mdl-button mdl-js-button mdl-button--icon" for="field">
+                                <i class="material-icons">search</i>
+                            </label>
+                            <div class="mdl-textfield__expandable-holder">
+                                <input class="mdl-textfield__input" name="word" onchange="search()" type="text"
+                                       id="field">
+                                <label class="mdl-textfield__label" for="field">Expandable Input</label>
                             </div>
-                        </form>
+                        </div>
                         <div sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown">
                             <button class="dropbtn">
                                 Действия
                             </button>
                             <div class="dropdown-content">
-                                <a href="/events/create">
+                                <a href="#eventPopup">
                                     Создать событие
                                 </a>
                                 <a href="#">
@@ -49,13 +47,14 @@
         </div>
     </main>
 </div>
-<script type="text/javascript" src="/js/eventsPage.js"></script>
-<script type="text/javascript">
-    function search() {
-        document.getElementById("search-note").submit()
-    }
-</script>
+<div th:insert="fragments::eventPopup"></div>
 <div th:insert="fragments::scripts"></div>
+<script type="text/javascript" src="/js/eventsPage.js"></script>
+<script type="text/javascript" src="/js/eventPopup.js"></script>
+<script type="text/javascript">
+    popupHeader.innerText = "Создайте новое событие"
+    applyButton.innerText = "Создать"
+</script>
 </body>
 
 </html>
