--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,7 +37,7 @@
     <span class="mdl-layout-title">Меню</span>
     <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/">Главная</a>
-        <a class="mdl-navigation__link" href="/events/all">События</a>
+        <a class="mdl-navigation__link" href="/events">События</a>
         <a class="mdl-navigation__link" sec:authorize="hasRole('ROLE_ADMIN')" href="/users">Участники</a>
     </nav>
 </div>
