--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -20,7 +20,7 @@
                 <h3>Here you can get information about new events of our department</h3>
                 <div>Some long and boring description here</div>
                 <div>
-                    <img src="/img/student.jpg">
+                    <img src="/static/img/student.jpg">
                 </div>
             </div>
         </div>
