--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -49,7 +49,7 @@
                 </table>
             </div>
 
-            <script type="text/javascript" src="/js/users.js"></script>
+            <script type="text/javascript" src="/static/js/users.js"></script>
         </div>
     </main>
 </div>
@@ -63,7 +63,7 @@
 
     onLoadUsersPage()
 </script>
-<script type="text/javascript" src="/js/emailPopup.js"></script>
+<script type="text/javascript" src="/static/js/emailPopup.js"></script>
 </body>
 
 </html>
