add js for profile

--- a/src/main/resources/templates/pages/events.html
+++ b/src/main/resources/templates/pages/events.html
@@ -49,8 +49,8 @@
 </div>
 <div th:insert="fragments::eventPopup"></div>
 <div th:insert="fragments::scripts"></div>
-<script type="text/javascript" src="/static/js/eventsPage.js"></script>
-<script type="text/javascript" src="/static/js/eventPopup.js"></script>
+<script type="text/javascript" src="/js/eventsPage.js"></script>
+<script type="text/javascript" src="/js/eventPopup.js"></script>
 <script type="text/javascript">
     popupHeader.innerText = "Создайте новое событие"
     applyButton.innerText = "Создать"
