--- a/src/main/resources/templates/pages/event.html
+++ b/src/main/resources/templates/pages/event.html
@@ -84,9 +84,9 @@
 <div th:insert="fragments::emailPopup"></div>
 <div th:insert="fragments::eventPopup"></div>
 <div th:insert="fragments::scripts"></div>
-<script type="text/javascript" src="/static/js/users.js"></script>
-<script type="text/javascript" src="/static/js/emailPopup.js"></script>
-<script type="text/javascript" src="/static/js/eventPopup.js"></script>
-<script type="text/javascript" src="/static/js/eventPage.js"></script>
+<script type="text/javascript" src="/js/users.js"></script>
+<script type="text/javascript" src="/js/emailPopup.js"></script>
+<script type="text/javascript" src="/js/eventPopup.js"></script>
+<script type="text/javascript" src="/js/eventPage.js"></script>
 </body>
 </html>
