--- a/src/main/resources/templates/pages/profile.html
+++ b/src/main/resources/templates/pages/profile.html
@@ -47,19 +47,18 @@
                 </div>
                 <div class="row_block" style="width: 100%">
                     <div class="img_wrap">
-                        <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
-                        <img th:unless="${image}" src="/img/profile.png">
+                        <img id="image" src="/img/profile.png">
                     </div>
                     <div class="column_block card_block" style="justify-content: space-between">
                         <div>
-                            <div th:text="${user.username}"></div>
-                            <div th:text="${user.email}"></div>
+                            <div id="username"></div>
+                            <div id="email"></div>
                             <hr>
                             <div th:if="${ready}">
-                                <div th:text="${profile.name}"></div>
-                                <div th:text="${university}"></div>
-                                <div th:text="${city}"></div>
-                                <div>Возраст: <span th:text="${profile.age}"></span></div>
+                                <div id="name"></div>
+                                <div id="university"></div>
+                                <div id="city"></div>
+                                <div>Возраст: <span id="age"></span></div>
                             </div>
                         </div>
                     </div>
@@ -85,5 +84,6 @@
     </main>
 </div>
 <div th:insert="fragments::scripts"></div>
+<script type="text/javascript" src="/js/profilePage.js"></script>
 </body>
 </html>
