--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -48,13 +48,12 @@
                     </tbody>
                 </table>
             </div>
-
-            <script type="text/javascript" src="/static/js/users.js"></script>
         </div>
     </main>
 </div>
 <div th:insert="fragments::emailPopup"></div>
 <div th:insert="fragments::scripts"></div>
+<script type="text/javascript" src="/js/users.js"></script>
 <script type="text/javascript">
     async function search() {
         let word = document.getElementById("field").value
@@ -63,7 +62,7 @@
 
     onLoadUsersPage()
 </script>
-<script type="text/javascript" src="/static/js/emailPopup.js"></script>
-</body>
+<script type="text/javascript" src="/js/emailPopup.js"></script>
 
+</body>
 </html>
